--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
   "name": "hello",
   "version": "1.0.0",
-  "description": "Sample TypeScript Language Service Plugin",
+  "description": "Tests the tslint-language-service plugin",
   "scripts": {
     "compile": "node node_modules/typescript/lib/tsc hello.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [
-    "typescript"
-  ],
   "devDependencies": {
-    "typescript": "^2.2.0-dev.20170213"
+    "typescript": "2.3.1-insiders.20170420",
+    "tslint": "5.1.0",
+    "tslint-language-service": "0.9.0"
   }
 }
